# EngWeb

./: .gitignore  Component diagram.drawio  Composite structure diagram.drawio  README.md  Untitled Diagram.drawio  blog.html  blog.js  contacts.html  contacts.js  create-post.html  create-post.js  data-service.js  full_program_listing.md  full_program_listing_fixed.txt  generate_corrected_report_docx.ps1  generate_final_complete_vkr_docx.ps1  generate_full_updated_vkr_docx.ps1  generate_preserved_vkr_docx.ps1  home.js  index.html  lessons.html  lessons.js  login.html  login.js  main.js  post.html  post.js  presentation_content.md  requests.html  requests.js  serve.ps1  server.js  services.html  short_program_fragments.md  styles.css  vkr_full_updated_source.txt  vkr_preserved_source.txt
.github/workflows/: cpp-backend.yml
cpp-backend-showcase/: CMakeLists.txt  README.md
cpp-backend-showcase/data/: lessons.json
cpp-backend-showcase/docs/: api.http
cpp-backend-showcase/include/lingoflux/: auth.hpp  http.hpp  json.hpp  metrics.hpp  router.hpp  store.hpp  thread_pool.hpp
cpp-backend-showcase/src/: auth.cpp  http.cpp  json.cpp  main.cpp  router.cpp  store.cpp  thread_pool.cpp
cpp-backend-showcase/tests/: unit_tests.cpp
